[gd_scene load_steps=16 format=3 uid="uid://utwlvgq8mlgv"]

[ext_resource type="Script" path="res://objects/doodle/roaming_doodle/roaming_doodle.gd" id="1_dy8iu"]
[ext_resource type="PackedScene" uid="uid://dbcmfw8e67wkl" path="res://objects/doodle/doodle_mod.tscn" id="2_57yw2"]
[ext_resource type="Script" path="res://objects/battle/battle_resources/doodle_actions/doodle_action.gd" id="2_msfie"]
[ext_resource type="PackedScene" uid="uid://suibio7o1avg" path="res://objects/misc/drop_shadow/drop_shadow.tscn" id="3_tqv7o"]
[ext_resource type="Script" path="res://objects/battle/battle_resources/doodle_actions/doodle_jump.gd" id="3_xx7sp"]
[ext_resource type="Script" path="res://objects/battle/battle_resources/doodle_actions/doodle_backflip.gd" id="4_0gpjk"]
[ext_resource type="Script" path="res://objects/battle/battle_resources/doodle_actions/doodle_playdead.gd" id="5_vp8wd"]
[ext_resource type="Script" path="res://objects/battle/battle_resources/doodle_actions/doodle_rollover.gd" id="6_ritgp"]
[ext_resource type="Script" path="res://objects/battle/battle_resources/doodle_actions/doodle_speak.gd" id="7_eviyd"]

[sub_resource type="Resource" id="Resource_ds0yl"]
script = ExtResource("3_xx7sp")
target_type = 0
action_name = "Jump"
one_time_use = false

[sub_resource type="Resource" id="Resource_0jeuc"]
script = ExtResource("4_0gpjk")
target_type = 0
action_name = "Backflip"
one_time_use = false

[sub_resource type="Resource" id="Resource_as0c2"]
script = ExtResource("6_ritgp")
target_type = 0
action_name = "Roll Over"
one_time_use = false

[sub_resource type="Resource" id="Resource_bjy37"]
script = ExtResource("7_eviyd")
target_type = 0
action_name = "Speak"
one_time_use = false

[sub_resource type="Resource" id="Resource_u4wn2"]
script = ExtResource("5_vp8wd")
target_type = 0
action_name = "Play Dead"
one_time_use = false

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_wgjhf"]
radius = 0.166849
height = 0.484297

[node name="RoamingDoodle" type="CharacterBody3D"]
collision_layer = 4
collision_mask = 5
floor_snap_length = 1.0
script = ExtResource("1_dy8iu")
doodle_actions = Array[ExtResource("2_msfie")]([SubResource("Resource_ds0yl"), SubResource("Resource_0jeuc"), SubResource("Resource_as0c2"), SubResource("Resource_bjy37"), SubResource("Resource_u4wn2")])

[node name="Doodle" parent="." instance=ExtResource("2_57yw2")]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)

[node name="HolePlacement" type="Node3D" parent="Doodle"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0.125, 1.66001)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.244025, 0)
shape = SubResource("CapsuleShape3D_wgjhf")

[node name="SFX" type="AudioStreamPlayer3D" parent="."]
bus = &"SFX"

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.253629, 0)

[node name="NavAgent" type="NavigationAgent3D" parent="."]

[node name="NavPauseTimer" type="Timer" parent="."]
one_shot = true

[node name="DropShadow" parent="." instance=ExtResource("3_tqv7o")]
transform = Transform3D(0.425, 0, 0, 0, 0.425, 0, 0, 0, 0.425, 0, 0.025, 0)

[node name="Label" type="Label" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 23.0

[connection signal="target_reached" from="NavAgent" to="." method="goal_reached"]
[connection signal="timeout" from="NavPauseTimer" to="." method="nav_pause_finished"]
